@@ -1,21 +1,18 @@
 package org.folio.services;
 
 import io.vertx.core.Future;
-import io.vertx.core.Promise;
 import io.vertx.core.Vertx;
 import io.vertx.sqlclient.Row;
-import io.vertx.sqlclient.RowSet;
 import org.folio.rest.persist.PostgresClient;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
 public class TenantDataProviderImpl implements TenantDataProvider {
-  private Vertx vertx;
+  private final Vertx vertx;
 
   @Autowired
   public TenantDataProviderImpl(Vertx vertx) {
@@ -25,13 +22,11 @@ public class TenantDataProviderImpl implements TenantDataProvider {
   @Override
   public Future<List<String>> getModuleTenants() {
     PostgresClient pgClient = PostgresClient.getInstance(vertx);
-    Promise<RowSet<Row>> promise = Promise.promise();
     String tenantQuery = "select nspname from pg_catalog.pg_namespace where nspname LIKE '%_mod_source_record_manager';";
-    pgClient.select(tenantQuery, promise);
-    return promise.future()
+    return pgClient.select(tenantQuery)
       .map(rowSet -> StreamSupport.stream(rowSet.spliterator(), false)
         .map(this::mapToTenant)
-        .collect(Collectors.toList())
+        .toList()
       );
   }
 
